 20100118 (T.S.)
 - src/padProto.c:
    o ignore return value of padStreamPet() (PADCMD_SIM command).
 20100118 (T.S.)
 - src/padProto.h: added PADCMD_STRM_FLAG_32 (32-bit stream data).
 20100118 (T.S.)
 - src/hostStream.c:
    o added timeout functionality (stream times out and stops if no
      PET or STRM command is received withing timeout).
    o added support for 32-bit stream data.
    o added padStreamPet().
    o include <padStream.h> to ensure API compatibility.
    o let padStreamSim() succeed even if stream is not connected
      provided that 'nosend' option is set.
 - src/hostStream.h: export/declare padStreamTimeoutSecs;
 20100113 (T.S.)
 - src/padProto.c, src/padStream.c, src/padStream.h:
   moved stream connection state handling into the padStream module and
   added a 'timeout' feature so that a stream that is not 'petted' or
   re-'started' within padStreamTimeoutSecs seconds it is forcefully stopped.
 - src/padStream.c: BUGFIX: ensure proper alignment of 'replyPacket'.
 - src/padStream.c: padStreamStart() resets connection state to 'unconnected'
   if start_stop_callback() returns nonzero and passes this return code
   to caller.
 - src/padStream.c: padStreamStart(), padStreamStop() - moved execution
   of start_stop_callback() into mutex-protected section.
 - src/padStream.c: padStreamStop() - reset/clear connection regardless
   of result returned by start_stop_callback().
 20100112 (T.S.)
 - src/padProto.c: let 'padRequest' use a RBUF instead of our own stack
   memory so that we can use udpCommSendPkt() (avoiding a copy operation).
 - src/udpComm.c, src/udpComm.h, src/udpCommBSD.c:
   CHANGED udpCommConnect() semantics DEVIATING FROM BSD 'connect()'.
   If the peer address is an IPv4 multicast-address then 'udpCommConnect()'
   just 'memorizes' the peer's address/port for sending. However, when
   receiving packets they are *not* filtered against the peer address/port
   (this would never succeed since the sender is never the connected MC